styles.css
html {
    font-family: 'Raleway', sans-serif;
}
    
header {
    margin-left: 3%;
}

.main-nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.main-nav a:nth-child(1) {
    margin-right: 35%;
}

.main-nav a{
    color: #0065FC;
    text-decoration: none;
}

.main-nav a:active {
    border-top: #0065FC solid 1px;
}

.acc {
    border-top: #0065FC solid 1px;
}

.acti {
    color: grey;
}

h1 {
    margin-bottom: -1rem;
}

.search {
    display: flex;
}

.marker {
    background-color: lightgrey;
    height: 25px;
    width: 33px;
    border-bottom-left-radius: 25%;
    border-top-left-radius: 25%;
    text-align: center;
    padding-top: 12px;
    vertical-align: middle;
    margin-left: -6px;
    font-size: 0.75rem;
}

.bar {
    height: 30px;
    border-color: white;
}

::placeholder {
    color: black;
    opacity: 1;
    font-weight: 700;
    font-size: 1rem;
}

.button {
    background-color: #0065FC;
    color: white;
    height: 35px;
    border-top-right-radius: 20%;
    border-bottom-right-radius: 20%;
}

.button i {
    display: none;
}

#btn-filt {
    display: flex;
    flex-wrap: wrap;
    margin-top: 15px;
    margin-bottom: 15px;
}

.btn-wrap {
    display: inline-flex;
    flex-wrap: wrap;
    width: 60%;
    justify-content: space-between;
    white-space: nowrap;
}

.filt p {
    margin-right: 5px;
}

.filt span{
    font-size: .95rem;
}

.filt {
    margin-top: 15px;
    margin-bottom: 15px;
}

.icon {
    background-color: #DEEBFF;
    height: 25px;
    width: 33px;
    border-radius: 50%;
    text-align: center;
    padding-top: 12px;
    vertical-align: middle;
    margin-left: -6px;
    color: #0065FC;
    font-size: 0.75rem;
}

.filter {
    background-color: white;
    border-radius: 30px;
    border-color: lightgray;
    font-size: 1rem;
   /* padding: 0 8px 0 4px; */
    text-align: unset;
   /* margin: 6px; */
   white-space: nowrap;
}

.filter span{
    font-size: .75rem;
}

.info {
    display: flex;
}

.info i{
    height: 15px;
    width: 15px;
    font-size: 0.75rem;
    border: 1px solid #f2f2f2;
    text-align: center;
    padding-top: 4px;
    margin-top: -5px;
    margin-right: 10px;
}

.info span{
    width: 42%;
}

.inform {
    border-radius: 50%;
    padding: 5px;
    background-color: white;
    border-color: grey;
    color: #0065FC;
}

.section-wrap {
    display: flex;
    justify-content: space-between;
    margin: 15px;
}

h2 {
    font-size: 1rem;
}

.accomm h2 {
    margin-left: 3%;
}
.accomm {
    background-color: #f2f2f2;
    border-radius: 10px;
    padding: 10px;
    width: 60%;
}

.accomm-card-wrap {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.accomm-card {
    border-radius: 15px;
    padding: 5px;
    background-color: white;
    width: 27%;
    margin: 2%;
}

.accomm-card img{
    object-fit: cover;
    height: 100px;
    width: 100%;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
}

.accomm-card a{
    color: black;
    text-decoration: none;
}

.accomm-card p, .accomm-card h3, .ratings{
    margin: -.5px 0;
    margin-left: 3px;
    font-size: .75rem;
}

.blue{
    color: #0065FC;
}

.gray {
    color: #f2f2f2;
}

.popular {
    background-color: #f2f2f2;
    border-radius: 15px;
    padding: 10px;
    width: 35%;
}

.popular h2{
    margin-left: 3%;
    margin-bottom: -0.25px;
}

.chart{
    position: relative;
    bottom: 5%;
    left: 90%;
    font-size: 1.25rem;
}

.popular-card-wrap {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-between;
}

.pop-card {
    border-radius: 15px;
    padding: 5px;
    background-color: white;
    margin: 3%;
}

.pop-card p, .pop-card h3, .ratings{
     /* margin: -.5px 0; */
     margin-left: -1px;
     font-size: 0.75rem;
}

.pop-card img{
    object-fit: cover;
    height: 100px;
    width: 100px;
    border-top-left-radius: 7%;
    border-bottom-left-radius: 7%;
    padding-right: 30px;
    max-width: 100%;
    
}
.pop-card a{
    display: flex;
    color: black;
    text-decoration: none;
}

.activ {
    padding-bottom: 5%;
    width: 98%;
    padding-right: 10px;
    padding-left: 10px;
   }

.activ-card-wrap {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;    
}

.activ-card {
    border-radius: 15px;
   /* padding: 5px; */
    background-color: white;
    border-bottom-right-radius: 15px;
    border-bottom-left-radius: 15px;
    width: 20%;
    box-shadow: 10px 5px 5px #f2f2f2;
}

.activ-card a{
    color: black;
    text-decoration: none;
    font-size: .75rem;
}

.activ h3 {
    margin-left: 3%;
}

.activ-card img{
    object-fit: cover;
    width: 100%;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
}

.large img {
    height: 300px;
}

.fort img {
    height: 210px;
}

.island img{
    height: 90px;
}

.notre img{
    height: 120px;
}

.longchamp img{
    height: 180px;
}

.second, .fourth {
    width: 22%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.second .activ-card, .fourth .activ-card{
    width: 100%;
    justify-content: space-between;
}

#footer{
    background-color: #f2f2f2;
    padding: 10px;
}

#footer a{
    color: black;
    text-decoration: none; 
}

#footer-card-wrap {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

#about {
    display: flex;
    flex-direction: column;
}

#ouraccomm {
    display: flex;
    flex-direction: column;
}

#assist {
    display: flex;
    flex-direction: column;
}

@media screen and (min-width: 450px) and (max-width: 900px) {
    .btn-wrap {
        width: 55%;
    }
    .info span {
       width: 100%;
   }
    .accomm {
       width: 50%;
   }

    .accomm-card {
    width: 40%;
   }

   .popular {
       width: 40%;
   }

   .pop-card {
       height: 165%;
       width: 92.5%;
   }

   .pop-card img {
       height: 140px;
   }
}

@media screen and (max-width: 450px) {
    html{
        font-size: 1.2rem;
    }

    h1 {
        font-size: 1.25rem;
    }

    h2 {
        font-size: 1rem;
    }

    h3 {
        font-size: .9rem;
    }
    
    .main-nav a{
        width: 50%;
    }

    .main-nav a:nth-child(1){
        margin-right: 0;
        order: 1;
    }

    .main-nav a:nth-child(2){
        order: 3;
    }

    .main-nav a:nth-child(3){
        order: 4;
    }

    .main-nav a:nth-child(4){
        order: 2;
        text-align: right;
    }

    .main-nav a:active {
        border-top: none;
        border-bottom: #0065FC solid 2px;
    }

    .acc {
        border-top: none;
        border-bottom: #0065FC solid 2px;
        text-align: center;
    }


    .acti{
        border-bottom: #f2f2f2 2px solid;
        text-align: center;
    }

    .bar {
        width: 100%;
    }

    .typing  {
        display: none;
    }

    .button i{
        display: block;
    }

    .search {
        padding: 10px;
    }

    .marker {
        height: 38px;
        padding-top: 20px;
    }

    .bar {
        height: 50px;
    }

    .button {
        height: 58px;
    }
    
    .btn-wrap {
        width: 100%;
        display: flex;
        justify-content: space-between;
    }

    .filter {
        margin: 5px 0;
    }
    .filter span {
        font-size: 1.2rem;
    }

    .btn-wrap button:nth-child(1){
        order: 1;
    }

    .btn-wrap button:nth-child(2){
       order: 3; 
    }

    .btn-wrap button:nth-child(3){
        order: 2;
    }

    .btn-wrap button:nth-child(4){
        order: 4;
    }

    .info {
        margin-bottom: 2px;
    }

    .info span {
        width: 100%;
    }
    
    .section-wrap{
        flex-direction: column-reverse;
    }

    .popular {
        width: 100%;
        margin: 0;
        padding: 0;
        border-radius: 0;
    }

    .pop-card img {
        height: 120px;
    }

    .chart {
        bottom: 23px;
    }

    .accomm h2, .accomm h3{
        margin: 3px 0;
    }

    .accomm-card-wrap {
        flex-direction: column;
    }

    .accomm {
        width: 100%;
        background-color: white;
        padding: 0;
    }

    .accomm-card {
        width: 100%;
        box-shadow: 10px 5px 5px #f2f2f2;
        padding: 0;
        margin: 15px 0;
    }

    .activ img {
        height: 100px;
    }

    .activ-card-wrap{
        flex-direction: column;
        justify-content: space-between;
        width: 100%;
    }

    .activ-card {
        width: 95%;
        margin-bottom: 15px;
    }
    
    .second, .fourth {
        width: 95%;
    }

    #footer-card-wrap{
        flex-direction: column;
    }
}

